--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Welcome to my<br />Portfolio</h1>
-						<p>A website where i showcase my skills in web design and the projects i have worked on in this field.</p>
+						<p>A website where i showcase the projects i have worked on in the fields of front-end development and UI/UX design</p>
 						<ul class="actions">
 							<li><a href="#post_featured" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -46,15 +46,14 @@
 							<div id="post_featured">
 								<article class="post featured">
 									<header class="major">
-									<h2><a href="#">My name is<br />Mehdi Belacel
+									<h2 class="text1"><a href="index.html">My name is<br />Mehdi Belacel
 									</a></h2>
-									<p>I am a self-taught front-end web developer and designer<br />who is passionate about creating aesthetically pleasing content for the end-user to enjoy
-									<br />by using the technical development tools which turn magic into reality </p>
+									<p>I am a front-end developer and designer who strives to create both aesthetically pleasing and easy to follow interfaces for the end-user <br> using the latest up to date development tools, i find joy in both the creative and technical aspects of designing, developing and finalizing impactful products and projects,  in other words turning imagination into reality.</p>
 									</header>
-									<a href="#" class="image main"><img src="images/Abt_me2.jpg" alt="" /></a>
+									<a href="index.html" class="image main"><img src="images/Abt_me2.jpg" alt="" /></a>
 									<br>
 									<ul class="actions special">
-									<li><a href="about me.html" class="button large">More About me</a></li>
+									<li><a href="about_me.html" class="button large">More About me</a></li>
 									</ul>
 								</article>
 							</div>
@@ -125,7 +124,7 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="tel:+216779809825">(+216)779809825</a></p>
+								<p><a href="tel:+216779809825">(+213)779809825</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
