--- a/index02.html
+++ b/index02.html
@@ -53,7 +53,7 @@
 						<a href="#" class="image main"><img src="images/Abt_me2.jpg" alt="" /></a>
 						<br>
 						<ul class="actions special">
-							<li><a href="about me.html" class="button large">More About me</a></li>
+							<li><a href="about_me.html" class="button large">More About me</a></li>
 						</ul>
 					</article>
 				</div>
