--- a/about_me.html
+++ b/about_me.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="logo">About me</a>
+						<a href="about_me.html" class="logo">About me</a>
 					</header>
 
 				<!-- Nav -->
