--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<header class="major">
 									<h2 class="text1"><a href="index.html">My name is<br />Mehdi Belacel
 									</a></h2>
-									<p>I am a front-end developer and designer who strives to create both aesthetically pleasing and easy to follow interfaces for the end-user <br> using the latest up to date development tools, i find joy in both the creative and technical aspects of designing, developing and finalizing impactful products and projects,  in other words turning imagination into reality.</p>
+									<p>I am a front-end developer and designer focused on crafting visually engaging and intuitive user interfaces. <br> My passion lies in merging creativity with technology, utilizing the latest development tools to streamline and automate workflows. <br> From concept to completion, I enjoy solving complex challenges and transforming ideas into functional, impactful digital products. <br> Whether enhancing user experiences or automating repetitive tasks, my goal is to bring efficiency and imagination together in every project I undertake.</p>
 									</header>
 									<a href="index.html" class="image main"><img src="images/Abt_me2.jpg" alt="" /></a>
 									<br>
