--- a/index02.html
+++ b/index02.html
@@ -47,8 +47,7 @@
 						<header class="major">
 							<h2><a href="#">My name is<br />Mehdi Belacel
 								</a></h2>
-							<p>I am a self-taught front-end web developer and designer<br />who is passionate about creating aesthetically pleasing content for the end-user to enjoy
-								<br />by using the technical development tools which turn magic into reality </p>
+							<p>I am a front-end developer and designer focused on crafting visually engaging and intuitive user interfaces. <br> My passion lies in merging creativity with technology, utilizing the latest development tools to streamline and automate workflows. <br> From concept to completion, I enjoy solving complex challenges and transforming ideas into functional, impactful digital products. <br> Whether enhancing user experiences or automating repetitive tasks, my goal is to bring efficiency and imagination together in every project I undertake.</p>
 						</header>
 						<a href="#" class="image main"><img src="images/Abt_me2.jpg" alt="" /></a>
 						<br>
