--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Welcome to my<br />Portfolio</h1>
-						<p>A website where i showcase the projects i have worked on in the fields of front-end development and UI/UX design</p>
+						<p>A website where i showcase the projects i have worked on in the fields of development and data managment</p>
 						<ul class="actions">
 							<li><a href="#post_featured" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
